# hotlap-service

./: .editorconfig  .gitignore  Cargo.toml  Procfile  README.md  project.toml
.github/workflows/: build.yml  ci.yml
client/: Cargo.toml  build.rs
client/src/: lib.rs  main.rs  results.rs
proto/: hotlap_service.proto
sdk/: Cargo.toml  buf.yaml  build.rs
sdk/proto/v1alpha/: circuits.proto  drivers.proto  events.proto  sessions.proto  simulators.proto  teams.proto
sdk/src/: lib.rs
server/: Cargo.toml  buf.work.yaml  buf.yaml  build.rs
server/migrations/: 20241219153310_simulators.up.sql
server/migrations/2024-05-14-142951_create_simulators/: down.sql  up.sql
server/src/: circuit.rs  circuits.rs  driver.rs  drivers.rs  event.rs  events.rs  lib.rs  main.rs  schema.rs  session.rs  sessions.rs  simulator.rs  team.rs  teams.rs
server/src/service/: circuit.rs  driver.rs  event.rs  interceptor.rs  mod.rs  session.rs  simulator.rs  team.rs
telemetry/: Cargo.toml
telemetry/src/: lib.rs
test/: 240204_031137_FP.json  240204_033243_FP.json  240204_035445_FP.json  240204_040539_FP.json  240204_120100_FP.json  240204_143416_FP.json  240204_143434_FP.json  240204_173008_FP.json  240204_173045_FP.json  240204_175010_FP.json  240212_024231_FP.json  240213_034751_FP.json  240213_040028_FP.json  240213_125044_FP.json  240213_132253_FP.json  240213_134257_FP.json  240213_140433_FP.json  240213_142556_FP.json  240213_144644_FP.json  240213_150803_FP.json  240213_150849_FP.json
