[package]
name = "hotlap-service-client"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/johnbellone/hotlap-service/client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camino = "1.1.6"
clap = { version = "4.4.18", features = ["derive", "cargo", "env", "string"] }
humantime = "2.1.0"
log = "0.4.17"
prost = "0.11.8"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread", "full", "tracing", "stats"] }
tokio-stream = "0.1.14"
tonic = { version = "0.8.3", features = ["tls", "gzip"] }
tracing = { version = "0.1.37", features = ["async-await", "log", "max_level_debug"] }
tracing-subscriber = { version = "0.3.16", features = ["tracing", "tracing-serde", "env-filter", "serde", "serde_json"] }
uuid = { version = "1.7.0", features = ["v7"] }

[build-dependencies]
tonic-build = "0.8.4"
