[package]
name = "hotlap-service-server"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"
resolver = "2"
repository = "https://github.com/johnbellone/hotlap-service/server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camino = "1.1.6"
clap = { version = "4.4.18", features = ["derive", "cargo", "env", "string"] }
h2 = { version = "0.4.2", features = ["stream"] }
humantime = "2.1.0"
log = "0.4.17"
prost = "0.11.8"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread", "full", "tracing", "stats"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tonic = { version = "0.8.3", features = ["tls", "gzip"] }
tonic-health = "0.10.2"
tonic-reflection = "0.6.0"
tracing = { version = "0.1.37", features = ["async-await", "log", "max_level_debug"] }
tracing-subscriber = { version = "0.3.16", features = ["tracing", "tracing-serde", "env-filter", "serde", "serde_json"] }

[build-dependencies]
tonic-build = "0.10.2"
