[package]
name = "hotlap-service-server"
version = "0.1.0"
edition = "2021"
resolver = "2"
authors = ["John Bellone <me@jbellone.dev>"]
repository = "https://github.com/johnbellone/hotlap-service/server"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "hotlap-service"
path = "src/bin/server.rs"
doc = false

[dependencies]
clap = { version = "4.4.18", features = ["derive", "cargo", "env", "string"] }
dotenvy = "0.15"
humantime = "2.1.0"
jwt = "0.16.0"
log = "0.4.17"
prost = "0.12.1"
prost-types = "0.12.1"
tokio = { version = "1.36", features = ["full", "tracing"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tonic = { version = "0.11", features = ["tls", "gzip"] }
tonic-health = "0.11"
tonic-reflection = "0.11"
tower = "0.4"
tracing = { version = "0.1.37", features = ["async-await", "log", "max_level_debug"] }
tracing-subscriber = { version = "0.3.16", features = ["tracing", "tracing-serde", "env-filter", "serde", "serde_json"] }
uuid = { version = "^1.7", features = ["v7"] }

hotlap-service-sdk = { path = "../sdk", version = "0.1.0" }

[build-dependencies]
tonic-buf-build = "*"
tonic-build = "*"
