[package]
name = "hotlap-telemetry"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"
resolver = "2"
repository = "https://github.com/johnbellone/hotlap-service/telemetry"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { version = "0.1.37", features = ["async-await", "log", "max_level_debug"] }
tracing-subscriber = { version = "0.3.16", features = ["tracing", "tracing-serde", "env-filter", "serde", "serde_json"] }
